--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <h2 class="theme-header">BestSeller Themes</h2>
       <div class="inner-section">
         <div class="theme-1">
-          <img src="Untitled design.png" alt="" />
+          <img src="STORIFY THEME.png" alt="" />
           <h2>Storify Theme</h2>
           <p>
             This theme is for blogging and bloggers. Because if you want to
