--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
           <a href="#"><button class="button-3">Preview></button></a>
         </div>
         <div class="buttons">
-          <a href="#"><button class="buttons button">Preview></button></a>
-          <a href="#"><button class="second-button">Preview></button></a>
+          <a href="storify.html"
+            ><button class="buttons button">Preview></button></a
+          >
+          <a href="#"><button class="second-button button">Preview></button></a>
           <a href="#"><button class="buttons button">Preview></button></a>
         </div>
       </section>
