--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="#"><button class="main-btn">CREATE</button></a>
         <nav>
           <a href="#"><p class="home">HOME</p></a>
-          <a href="#"><p class="about">ABOUT</p></a>
+          <a href="about.html"><p class="about">ABOUT</p></a>
           <a href="#"><p class="themes">THEMES</p></a>
           <a href="#"><p class="contact">CONTACT</p></a>
         </nav>
